# ex-todo-api

./: .env.example  Cargo.toml  Dockerfile  Makefile  READEME.md  README.md  docker-compose.yml
migrations/: 20240606182724_init.sql  20240606182724_init.up.sql  20240611090807_otps.down.sql  20240611090807_otps.up.sql  20240618161300_lists.down.sql  20240618161300_lists.up.sql
src/: main.rs  routes.rs
src/handlers/: health_checker.rs  list.rs  mod.rs  user_and_auth.rs
src/middlewares/: authorization_middleware.rs  mod.rs
src/models/: list_model.rs  mod.rs  otp_model.rs  user_model.rs
src/schemas/: list_schema.rs  mod.rs  otp_schema.rs  user_schema.rs
src/utils/: email_sender_util.rs  mod.rs  otp_util.rs  password_util.rs  serializer_util.rs  token_util.rs  uploader_util.rs
