[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
argon2 = "0.5.3"
axum = { version = "0.7.3", features = ["multipart"]}
axum-macros = "0.4.1"
chrono = { version = "0.4.24", features = ["serde"] }
cloudinary = "0.4.0"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
lettre = "0.10.0-rc.3"
lettre_email = "0.9.4"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
tempfile = "3.10.1"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }

[[bin]]
name = "todo-app"
path = "src/main.rs"
